# stmpro

./: Curves.py  ExportWindow.py  Files.py  FilterWindow.py  Filters.py  FourierWindow.py  GUIUtils.py  HistogramWindow.py  Images.py  Makefile  ProfileWindow.py  README.md  ResultWindow.py  STM.py  STM.spec  STMData.py  STM_gui.py  STMgui.py  ScaleWindow.py  Si(553)-Pb2--29_1.Z_mtrx  Si(553)-Pb2_0001.mtrx  Spectroscopy.py  Topography.py  Utils.py  main.py  matrixFileHandling.py  pyproject.toml  requirements.txt
icons/: horizontal_mirror.afdesign  level_linewise.afdesign  open_mtrx.afdesign  open_xyz.afdesign  profile.afdesign  redo.afdesign  rotate_anticlockwise.afdesign  rotate_clockwise.afdesign  undo.afdesign  untitled.afdesign  vertical_mirror.afdesign
resources/icons/: export.afdesign  fft.afdesign  filter.afdesign  level.afdesign  scale.afdesign  set_zero.afdesign
src/stmpro/: STM.py  STMgui.py  __main__.py  stm.py  stm_gui.py
src/stmpro/data/: STMData.py  Spectroscopy.py  Topography.py  spectroscopy.py  topography.py
src/stmpro/files/: Files.py  files.py  matrixFileHandling.py
src/stmpro/gui/: ExportWindow.py  FilterWindow.py  FourierWindow.py  HistogramWindow.py  ProfileWindow.py  ScaleWindow.py  export_window.py  filter_window.py  fourier_window.py  histogram_window.py  profile_window.py  result_window.py  scale_window.py
src/stmpro/processing/: Filters.py  Images.py
