[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "stmpro"
authors = [
    {name = "Marek Dachniewicz", email = "marek138@o2.pl"},
]
description = "Scanning tunneling microscopy data analysis"
readme = ""
requires-python = ">=3.9"
keywords = ["STM", "Image analysis", "Data analysis"]
#license = {text = "BSD-3-Clause"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "numpy",
    'scipy',
    'matplotlib',
    'pyqt5'
]
dynamic = ["version"]

[project.scripts]
my-script = "src.stm:main"